Доработанный вид и отзывы

--- a/citycar/notbook/Views/Contacts/Create.cshtml
+++ b/citycar/notbook/Views/Contacts/Create.cshtml
@@ -5,7 +5,12 @@
 }
 
 <!DOCTYPE html>
-
+<style>
+    body {
+        background: #FFFFE0; /* Цвет фона */
+        color: #000000; /* Цвет текста */
+    }
+</style>
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
