--- a/citycar/notbook/Views/Home/Create.cshtml
+++ b/citycar/notbook/Views/Home/Create.cshtml
@@ -5,7 +5,12 @@ ViewData["Title"] = "Create";
 }
 
 <h1>Создать заказ</h1>
-
+<style>
+    body {
+        background: #FFFFE0; /* Цвет фона */
+        color: #000000; /* Цвет текста */
+    }
+</style>
 @using (Html.BeginForm())
 {
     <dt class="col-sm-2">
