--- a/citycar/notbook/Views/Home/Detail.cshtml
+++ b/citycar/notbook/Views/Home/Detail.cshtml
@@ -4,7 +4,12 @@
 }
 
 <h1>Подробности о заказе</h1>
-
+<style>
+    body {
+        background: #FFFFE0; /* Цвет фона */
+        color: #000000; /* Цвет текста */
+    }
+</style>
 <div>
     <h4></h4>
     <hr />
